# kumagai-20260303

./: package-lock.json  pyproject.toml
.research/: research_history.json
.research/latex/mdpi/: main.tex  references.bib
.research/results/: stderr.txt  stdout.txt
.research/results/comparative-1-baseline-cot-gsm8k/: wandb_metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-c3ot-gsm8k/: wandb_metrics.json
config/: config.yaml
config/run/: comparative-1-baseline-cot-gsm8k.yaml  proposed-c3ot-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
