[project]
name = "kumagai-c3ot-experiment"
version = "0.1.0"
description = "Commitment-Checked Chain-of-Thought (C3oT) prompt tuning experiment"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "wandb>=0.16.0",
    "datasets>=2.16.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "pydantic>=2.6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [VALIDATOR FIX - Attempt 1]
# [PROBLEM]: Docker build failed with "Unable to determine which files to ship inside the wheel"
# [CAUSE]: hatchling build backend couldn't find the source files because pyproject.toml didn't specify where they are located
# [FIX]: Added [tool.hatch.build.targets.wheel] section with packages = ["src"] to tell hatchling that source code is in the src/ directory
#
# [OLD CODE]:
# (no hatch configuration section existed)
#
# [NEW CODE]:
[tool.hatch.build.targets.wheel]
packages = ["src"]